--- a/styles/aca.css
+++ b/styles/aca.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Manrope:wght@300;400;500;600&display=swap');
+@import "./colors.css";
 
 @tailwind base;
 @tailwind components;
